fix day alignment of months that start on a Sunday

--- a/assets/css/_calendar.scss
+++ b/assets/css/_calendar.scss
@@ -213,7 +213,7 @@
         grid-column: 6;
     }
 
-    .day-7:first-child {
+    .day-0:first-child {
         grid-column: 7;
     }
 }
